gcc/testsuite/rust/rustc/ui/error-codes/E0604.rs
fn main() {
    1u32 as char; // { dg-error ".E0604." "" { target *-*-* } }
}

